# langchain-chatbot

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
Notebooks/: Notebook-1.ipynb
src/: main.py
